// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebhooksWrapper should match a snapshot for the /webhooks/about page 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        Webhooks
      </h1>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r3:"
      >
        <button
          aria-controls=":r3:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="el-tabs-full-width el-tabs-wrap"
      >
        <div
          class="mocked-styled-120 el-tabs-options-wrap"
          role="tablist"
        >
          <input
            aria-selected="true"
            checked=""
            class="mocked-styled-117 el-tabs"
            id="webhook-tab-about"
            name="webhook-tabs"
            type="radio"
            value="/webhooks/about"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="webhook-tab-about"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              About Webhooks
            </span>
          </label>
          <input
            aria-selected="false"
            class="mocked-styled-117 el-tabs"
            id="webhook-tab-new"
            name="webhook-tabs"
            type="radio"
            value="/webhooks/new"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="webhook-tab-new"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Add Webhook
            </span>
          </label>
          <input
            aria-selected="false"
            class="mocked-styled-117 el-tabs"
            id="webhook-tab-manage"
            name="webhook-tabs"
            type="radio"
            value="/webhooks/manage"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="webhook-tab-manage"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Manage Webhooks
            </span>
          </label>
          <input
            aria-selected="false"
            class="mocked-styled-117 el-tabs"
            id="webhook-tab-logs"
            name="webhook-tabs"
            type="radio"
            value="/webhooks/logs"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="webhook-tab-logs"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Transaction Logs
            </span>
          </label>
        </div>
        <div
          class="el-tabs-full-width el-tabs-footer"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      Webhooks
    </h1>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r3:"
    >
      <button
        aria-controls=":r3:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="el-tabs-full-width el-tabs-wrap"
    >
      <div
        class="mocked-styled-120 el-tabs-options-wrap"
        role="tablist"
      >
        <input
          aria-selected="true"
          checked=""
          class="mocked-styled-117 el-tabs"
          id="webhook-tab-about"
          name="webhook-tabs"
          type="radio"
          value="/webhooks/about"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="webhook-tab-about"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            About Webhooks
          </span>
        </label>
        <input
          aria-selected="false"
          class="mocked-styled-117 el-tabs"
          id="webhook-tab-new"
          name="webhook-tabs"
          type="radio"
          value="/webhooks/new"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="webhook-tab-new"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Add Webhook
          </span>
        </label>
        <input
          aria-selected="false"
          class="mocked-styled-117 el-tabs"
          id="webhook-tab-manage"
          name="webhook-tabs"
          type="radio"
          value="/webhooks/manage"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="webhook-tab-manage"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Manage Webhooks
          </span>
        </label>
        <input
          aria-selected="false"
          class="mocked-styled-117 el-tabs"
          id="webhook-tab-logs"
          name="webhook-tabs"
          type="radio"
          value="/webhooks/logs"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="webhook-tab-logs"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Transaction Logs
          </span>
        </label>
      </div>
      <div
        class="el-tabs-full-width el-tabs-footer"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`WebhooksWrapper should match a snapshot for the /webhooks/logs page 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        Webhooks
      </h1>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r2:"
      >
        <button
          aria-controls=":r2:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="el-tabs-full-width el-tabs-wrap"
      >
        <div
          class="mocked-styled-120 el-tabs-options-wrap"
          role="tablist"
        >
          <input
            aria-selected="false"
            class="mocked-styled-117 el-tabs"
            id="webhook-tab-about"
            name="webhook-tabs"
            type="radio"
            value="/webhooks/about"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="webhook-tab-about"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              About Webhooks
            </span>
          </label>
          <input
            aria-selected="false"
            class="mocked-styled-117 el-tabs"
            id="webhook-tab-new"
            name="webhook-tabs"
            type="radio"
            value="/webhooks/new"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="webhook-tab-new"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Add Webhook
            </span>
          </label>
          <input
            aria-selected="false"
            class="mocked-styled-117 el-tabs"
            id="webhook-tab-manage"
            name="webhook-tabs"
            type="radio"
            value="/webhooks/manage"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="webhook-tab-manage"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Manage Webhooks
            </span>
          </label>
          <input
            aria-selected="true"
            checked=""
            class="mocked-styled-117 el-tabs"
            id="webhook-tab-logs"
            name="webhook-tabs"
            type="radio"
            value="/webhooks/logs"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="webhook-tab-logs"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Transaction Logs
            </span>
          </label>
        </div>
        <div
          class="el-tabs-full-width el-tabs-footer"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      Webhooks
    </h1>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r2:"
    >
      <button
        aria-controls=":r2:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="el-tabs-full-width el-tabs-wrap"
    >
      <div
        class="mocked-styled-120 el-tabs-options-wrap"
        role="tablist"
      >
        <input
          aria-selected="false"
          class="mocked-styled-117 el-tabs"
          id="webhook-tab-about"
          name="webhook-tabs"
          type="radio"
          value="/webhooks/about"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="webhook-tab-about"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            About Webhooks
          </span>
        </label>
        <input
          aria-selected="false"
          class="mocked-styled-117 el-tabs"
          id="webhook-tab-new"
          name="webhook-tabs"
          type="radio"
          value="/webhooks/new"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="webhook-tab-new"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Add Webhook
          </span>
        </label>
        <input
          aria-selected="false"
          class="mocked-styled-117 el-tabs"
          id="webhook-tab-manage"
          name="webhook-tabs"
          type="radio"
          value="/webhooks/manage"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="webhook-tab-manage"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Manage Webhooks
          </span>
        </label>
        <input
          aria-selected="true"
          checked=""
          class="mocked-styled-117 el-tabs"
          id="webhook-tab-logs"
          name="webhook-tabs"
          type="radio"
          value="/webhooks/logs"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="webhook-tab-logs"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Transaction Logs
          </span>
        </label>
      </div>
      <div
        class="el-tabs-full-width el-tabs-footer"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`WebhooksWrapper should match a snapshot for the /webhooks/manage page 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        Webhooks
      </h1>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r1:"
      >
        <button
          aria-controls=":r1:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="el-tabs-full-width el-tabs-wrap"
      >
        <div
          class="mocked-styled-120 el-tabs-options-wrap"
          role="tablist"
        >
          <input
            aria-selected="false"
            class="mocked-styled-117 el-tabs"
            id="webhook-tab-about"
            name="webhook-tabs"
            type="radio"
            value="/webhooks/about"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="webhook-tab-about"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              About Webhooks
            </span>
          </label>
          <input
            aria-selected="false"
            class="mocked-styled-117 el-tabs"
            id="webhook-tab-new"
            name="webhook-tabs"
            type="radio"
            value="/webhooks/new"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="webhook-tab-new"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Add Webhook
            </span>
          </label>
          <input
            aria-selected="true"
            checked=""
            class="mocked-styled-117 el-tabs"
            id="webhook-tab-manage"
            name="webhook-tabs"
            type="radio"
            value="/webhooks/manage"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="webhook-tab-manage"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Manage Webhooks
            </span>
          </label>
          <input
            aria-selected="false"
            class="mocked-styled-117 el-tabs"
            id="webhook-tab-logs"
            name="webhook-tabs"
            type="radio"
            value="/webhooks/logs"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="webhook-tab-logs"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Transaction Logs
            </span>
          </label>
        </div>
        <div
          class="el-tabs-full-width el-tabs-footer"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      Webhooks
    </h1>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r1:"
    >
      <button
        aria-controls=":r1:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="el-tabs-full-width el-tabs-wrap"
    >
      <div
        class="mocked-styled-120 el-tabs-options-wrap"
        role="tablist"
      >
        <input
          aria-selected="false"
          class="mocked-styled-117 el-tabs"
          id="webhook-tab-about"
          name="webhook-tabs"
          type="radio"
          value="/webhooks/about"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="webhook-tab-about"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            About Webhooks
          </span>
        </label>
        <input
          aria-selected="false"
          class="mocked-styled-117 el-tabs"
          id="webhook-tab-new"
          name="webhook-tabs"
          type="radio"
          value="/webhooks/new"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="webhook-tab-new"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Add Webhook
          </span>
        </label>
        <input
          aria-selected="true"
          checked=""
          class="mocked-styled-117 el-tabs"
          id="webhook-tab-manage"
          name="webhook-tabs"
          type="radio"
          value="/webhooks/manage"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="webhook-tab-manage"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Manage Webhooks
          </span>
        </label>
        <input
          aria-selected="false"
          class="mocked-styled-117 el-tabs"
          id="webhook-tab-logs"
          name="webhook-tabs"
          type="radio"
          value="/webhooks/logs"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="webhook-tab-logs"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Transaction Logs
          </span>
        </label>
      </div>
      <div
        class="el-tabs-full-width el-tabs-footer"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`WebhooksWrapper should match a snapshot for the /webhooks/new page 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        Webhooks
      </h1>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r0:"
      >
        <button
          aria-controls=":r0:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="el-tabs-full-width el-tabs-wrap"
      >
        <div
          class="mocked-styled-120 el-tabs-options-wrap"
          role="tablist"
        >
          <input
            aria-selected="false"
            class="mocked-styled-117 el-tabs"
            id="webhook-tab-about"
            name="webhook-tabs"
            type="radio"
            value="/webhooks/about"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="webhook-tab-about"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              About Webhooks
            </span>
          </label>
          <input
            aria-selected="true"
            checked=""
            class="mocked-styled-117 el-tabs"
            id="webhook-tab-new"
            name="webhook-tabs"
            type="radio"
            value="/webhooks/new"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="webhook-tab-new"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Add Webhook
            </span>
          </label>
          <input
            aria-selected="false"
            class="mocked-styled-117 el-tabs"
            id="webhook-tab-manage"
            name="webhook-tabs"
            type="radio"
            value="/webhooks/manage"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="webhook-tab-manage"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Manage Webhooks
            </span>
          </label>
          <input
            aria-selected="false"
            class="mocked-styled-117 el-tabs"
            id="webhook-tab-logs"
            name="webhook-tabs"
            type="radio"
            value="/webhooks/logs"
          />
          <label
            class="mocked-styled-118 el-tabs-label"
            for="webhook-tab-logs"
            role="tab"
            tabindex="0"
          >
            <span
              class="el-tabs-item"
            >
              Transaction Logs
            </span>
          </label>
        </div>
        <div
          class="el-tabs-full-width el-tabs-footer"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      Webhooks
    </h1>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r0:"
    >
      <button
        aria-controls=":r0:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="el-tabs-full-width el-tabs-wrap"
    >
      <div
        class="mocked-styled-120 el-tabs-options-wrap"
        role="tablist"
      >
        <input
          aria-selected="false"
          class="mocked-styled-117 el-tabs"
          id="webhook-tab-about"
          name="webhook-tabs"
          type="radio"
          value="/webhooks/about"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="webhook-tab-about"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            About Webhooks
          </span>
        </label>
        <input
          aria-selected="true"
          checked=""
          class="mocked-styled-117 el-tabs"
          id="webhook-tab-new"
          name="webhook-tabs"
          type="radio"
          value="/webhooks/new"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="webhook-tab-new"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Add Webhook
          </span>
        </label>
        <input
          aria-selected="false"
          class="mocked-styled-117 el-tabs"
          id="webhook-tab-manage"
          name="webhook-tabs"
          type="radio"
          value="/webhooks/manage"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="webhook-tab-manage"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Manage Webhooks
          </span>
        </label>
        <input
          aria-selected="false"
          class="mocked-styled-117 el-tabs"
          id="webhook-tab-logs"
          name="webhook-tabs"
          type="radio"
          value="/webhooks/logs"
        />
        <label
          class="mocked-styled-118 el-tabs-label"
          for="webhook-tab-logs"
          role="tab"
          tabindex="0"
        >
          <span
            class="el-tabs-item"
          >
            Transaction Logs
          </span>
        </label>
      </div>
      <div
        class="el-tabs-full-width el-tabs-footer"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
